Release for Drools 8.44.2.Final