@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 Kevin Wimmer
+ * Copyright 2023-2024 Kevin Wimmer
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,16 +15,14 @@
 
 package io.github.kevinwimmer.maven.pom;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.Collection;
 
-import org.appformer.maven.support.AFReleaseId;
-import org.appformer.maven.support.AFReleaseIdImpl;
-import org.appformer.maven.support.DependencyFilter;
-import org.appformer.maven.support.PomModel;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
+import org.kie.api.builder.ReleaseId;
+import org.kie.util.maven.support.DependencyFilter;
+import org.kie.util.maven.support.PomModel;
+import org.kie.util.maven.support.ReleaseIdImpl;
 
 public class ProjectPomModel implements PomModel {
 
@@ -35,41 +33,41 @@ public class ProjectPomModel implements PomModel {
     }
 
     @Override
-    public AFReleaseId getReleaseId() {
-        return new AFReleaseIdImpl(project.getGroup().toString(), project.getName(), project.getVersion().toString());
+    public ReleaseId getReleaseId() {
+        return new ReleaseIdImpl(project.getGroup().toString(), project.getName(), project.getVersion().toString());
     }
 
     @Override
-    public AFReleaseId getParentReleaseId() {
+    public ReleaseId getParentReleaseId() {
         Project parent = project.getParent();
-        return parent == null ? null : new AFReleaseIdImpl(parent.getGroup().toString(), parent.getName(), parent.getVersion().toString());
+        return parent == null ? null : new ReleaseIdImpl(parent.getGroup().toString(), parent.getName(), parent.getVersion().toString());
     }
 
     @Override
-    public Collection<AFReleaseId> getDependencies() {
+    public Collection<ReleaseId> getDependencies() {
         return project
                 .getConfigurations()
                 .stream()
                 .flatMap(config -> getAllDependencies(config).stream())
-                .collect(toList());
+                .toList();
     }
 
-    private Collection<AFReleaseId> getAllDependencies(Configuration config) {
+    private Collection<ReleaseId> getAllDependencies(Configuration config) {
         return config
                 .getAllDependencies()
                 .stream()
-                .map(dep -> new AFReleaseIdImpl(dep.getGroup(), dep.getName(), dep.getVersion()))
-                .collect(toList());
+                .map(dep -> (ReleaseId) new ReleaseIdImpl(dep.getGroup(), dep.getName(), dep.getVersion()))
+                .toList();
     }
 
     @Override
-    public Collection<AFReleaseId> getDependencies(DependencyFilter filter) {
+    public Collection<ReleaseId> getDependencies(DependencyFilter filter) {
         return project
                 .getConfigurations()
                 .getAsMap()
                 .entrySet()
                 .stream()
                 .flatMap(entry -> getAllDependencies(entry.getValue()).stream().filter(dep -> filter.accept(dep, entry.getKey())))
-                .collect(toList());
+                .toList();
     }
 }
